--- a/examples/sample_usage.ipynb
+++ b/examples/sample_usage.ipynb
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "selected_ind = simulator.select(population, k=10)\n",
+    "selected_ind, _ = simulator.select(population, k=10)\n",
     "simulator.GEBV(selected_ind).mean()"
    ]
   },
