fixed sample_usage.ipynb as diallele output (n_diallele n_children m pl)

--- a/examples/sample_usage.ipynb
+++ b/examples/sample_usage.ipynb
@@ -2,30 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from chromax import Simulator\n",
     "from chromax.sample_data import genetic_map, genome\n",
     "import numpy as np\n",
+    "from einops import rearrange\n",
     "\n",
     "simulator = Simulator(genetic_map)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Yield    8.223845\n",
+       "Heading Date              1.893241\n",
+       "Protein Content          -0.342523\n",
+       "Plant Height             -2.781311\n",
+       "Thousand Kernel Weight    0.099523\n",
+       "Yield                     6.489075\n",
+       "Fusarium Head Blight      2.204687\n",
+       "Spike Emergence Period   -1.072572\n",
        "dtype: float32"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,17 +44,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Yield    15.454689\n",
+       "Heading Date              6.297620\n",
+       "Protein Content          -0.094808\n",
+       "Plant Height             -2.649135\n",
+       "Thousand Kernel Weight   -3.082972\n",
+       "Yield                     2.520299\n",
+       "Fusarium Head Blight     -2.526276\n",
+       "Spike Emergence Period   -1.486085\n",
        "dtype: float32"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,28 +72,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "450"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n"
+     ]
     }
    ],
    "source": [
     "new_pop = simulator.diallel(selected_ind, n_offspring=10)\n",
-    "len(new_pop)"
+    "print(len(new_pop))\n",
+    "new_pop = rearrange(new_pop, \"n nc m pl -> (n nc) m pl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +100,7 @@
        "5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +126,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "sim",
    "language": "python",
    "name": "python3"
   },
@@ -129,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.8"
   },
   "orig_nbformat": 4
  },
